--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,9 @@
 export.cfg
 #export_presets.cfg
 
-# Output directory.
+# Output and temporary directories.
 _export
 _releases
-
 _tmp
 
 # Imported translations (automatically generated from CSV files)
